WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43345
Compile fix for Android, add missing guards
https://bugs.webkit.org/show_bug.cgi?id=43345
Summary
Compile fix for Android, add missing guards
Kristian Monsen
Reported
2010-08-02 06:41:52 PDT
INSPECTOR is not enabled on Android, some code was added to ScriptValue.cpp without guards.
Attachments
Proposed patch.
(1.26 KB, patch)
2010-08-02 06:45 PDT
,
Kristian Monsen
no flags
Details
Formatted Diff
Diff
Proposed patch (Updated Changelog description).
(1.31 KB, patch)
2010-08-02 06:51 PDT
,
Kristian Monsen
yurys
: review+
Details
Formatted Diff
Diff
Updated patch (rebase)
(1.33 KB, patch)
2010-08-02 08:16 PDT
,
Kristian Monsen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kristian Monsen
Comment 1
2010-08-02 06:45:06 PDT
Created
attachment 63211
[details]
Proposed patch.
Kristian Monsen
Comment 2
2010-08-02 06:51:31 PDT
Created
attachment 63212
[details]
Proposed patch (Updated Changelog description).
Steve Block
Comment 3
2010-08-02 07:06:12 PDT
Why is an equivalent fix not required for JSC. Also, it looks like you need to rebase and update your patch.
Kristian Monsen
Comment 4
2010-08-02 08:03:23 PDT
The JSC version is actually guarded in the same way.
Kristian Monsen
Comment 5
2010-08-02 08:16:24 PDT
Created
attachment 63220
[details]
Updated patch (rebase)
Steve Block
Comment 6
2010-08-02 08:45:03 PDT
Comment on
attachment 63220
[details]
Updated patch (rebase) r=me
WebKit Commit Bot
Comment 7
2010-08-02 09:05:28 PDT
Comment on
attachment 63220
[details]
Updated patch (rebase) Clearing flags on attachment: 63220 Committed
r64464
: <
http://trac.webkit.org/changeset/64464
>
WebKit Commit Bot
Comment 8
2010-08-02 09:05:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug