2010-08-02  Kristian Monsen  <kristianm@google.com>

Reviewed by Steve Block.

        Compile fix for Android, guard inspector code with ENABLE(INSPECTOR).
        https://bugs.webkit.org/show_bug.cgi?id=43345
        Code introduced in this CL:
        http://trac.webkit.org/changeset/63891

        No new tests, just a compile fix.

        * bindings/v8/ScriptValue.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@64464 bbb929c8-8fbe-4397-9dbb-9b2b20218538