third_party/WebKit/WebCore/bindings/v8/ScriptValue.cpp
@@ -68,6 +68,7 @@ String ScriptValue::toString(ScriptState*) const
     return toWebCoreString(m_value);
 }
 
+#if ENABLE(INSPECTOR)
 static PassRefPtr<InspectorValue> v8ToInspectorValue(v8::Handle<v8::Value> value)
 {
     if (value.IsEmpty()) {
@@ -123,5 +124,6 @@ PassRefPtr<InspectorValue> ScriptValue::toInspectorValue(ScriptState* scriptStat
     v8::Context::Scope contextScope(scriptState->context());
     return v8ToInspectorValue(m_value);
 }
+#endif
 
 } // namespace WebCore
